[package]
name = "learning_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.9.0"
actix-web = "4.5.1"
anyhow = "1.0.81"
async-graphql = { version = "7.0.3", features = ["log", "chrono"] }
async-graphql-actix-web = "7.0.3"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
once_cell = "1.19.0"
rand = "0.8.5"
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.8.0", features = ["serde"] }
